Add SimpleForm contact form

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 							</section>
 						</section>
 						<section class="page-text sixcol last">
-							<form action="emailer.php" method="POST" novalidate>
+							<form action="http://getsimpleform.com/messages?form_api_token=11278bde88647f1e0a6c433bf6b01cbd" method="POST" novalidate>
 								<div>
 									<label for="enquiry">ENQUIRY</label>
 									<input name="enquiry" id="enquiry" type="text" placeholder="What is the nature of your enquiry?" required="required" />
@@ -181,8 +181,6 @@
 								<div>
 									<div id="requiredfields">* Required Fields</div>
 									<input type="submit" value="Send" />
-									<input type="hidden" name="ts" value="1407443338" />
-									<input type="hidden" name="token" value="314802f4210bcd0cd3beca19676d4d7a" />
 								</div>
 							</form>
 						</section>
